files arranged in a file structure, added middlewares, setted config etc.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
-PORT=
+# 'production', 'development', 'test'
+NODE_ENV= development
+PORT=3000
+MONGODB_URL=mongodb://127.0.0.1:27017/node-boilerplate
+JWT_SECRET=thisisasamplesecret
+JWT_ACCESS_EXPIRATION_MINUTES=30
+JWT_REFRESH_EXPIRATION_DAYS=30
+
+# SMTP configuration options
+# For testing, fake SMTP service Ethereal: https://ethereal.email/create
+SMTP_HOST=email-server
+SMTP_PORT=587
+SMTP_USERNAME=email-server-username
+SMTP_PASSWORD=email-server-password
+EMAIL_FROM=support@yourapp.com
