--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.9.2"
+    "express-rate-limit": "^5.2.6",
+    "express-validator": "^6.9.2",
+    "joi": "^17.4.0"
   }
 }
