--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
     "express-validator": "^6.9.2",
+    "helmet": "^4.4.1",
+    "helmet-crossdomain": "^0.5.0",
     "joi": "^17.4.0",
     "winston": "^3.3.3"
   }
