--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^4.4.1",
     "helmet-crossdomain": "^0.5.0",
     "joi": "^17.4.0",
+    "nocache": "^2.1.0",
     "winston": "^3.3.3"
   }
 }
