--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/talatkuyuk/node-express-mongo-boilerplate-tk#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
