--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express-validator": "^6.9.2",
     "helmet": "^4.4.1",
     "helmet-crossdomain": "^0.5.0",
+    "http-status": "^1.5.0",
     "joi": "^17.4.0",
+    "morgan": "^1.10.0",
     "nocache": "^2.1.0",
     "winston": "^3.3.3"
   }
