implemented authentication, jwt, user roles, mongodb, validation, controller-service, schema etc.

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,11 @@ MONGODB_URL=mongodb://127.0.0.1:27017/node-boilerplate
 JWT_SECRET=thisisasamplesecret
 JWT_ACCESS_EXPIRATION_MINUTES=30
 JWT_REFRESH_EXPIRATION_DAYS=30
+JWT_RESET_PASSWORD_EXPIRATION_MINUTES=60
+JWT_VERIFY_EMAIL_EXPIRATION_MINUTES=3600
 
 # SMTP configuration options
-# For testing, fake SMTP service Ethereal: https://ethereal.email/create
-SMTP_HOST=email-server
+SMTP_HOST=smtp.email-server
 SMTP_PORT=587
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
