--- a/package.json
+++ b/package.json
@@ -18,17 +18,25 @@
   },
   "homepage": "https://github.com/talatkuyuk/node-express-mongo-boilerplate-tk#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "express-rate-limit": "^5.2.6",
     "express-validator": "^6.9.2",
     "helmet": "^4.4.1",
     "helmet-crossdomain": "^0.5.0",
     "http-status": "^1.5.0",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.5",
     "morgan": "^1.10.0",
     "nocache": "^2.1.0",
+    "nodemailer": "^6.5.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "winston": "^3.3.3"
   }
 }
